// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Complete [block completion] =#57622108-1337-4edd-833a-2557835bcfe0. 1`] = `
Object {
  "codeFragments": Array [
    Object {
      "attrs": undefined,
      "code": "Equal",
      "display": "=",
      "errors": Array [],
      "hide": false,
      "renderText": undefined,
      "type": "any",
      "value": "=",
    },
    Object {
      "attrs": Object {
        "id": "57622108-1337-4edd-833a-2557835bcfe0",
        "kind": "Block",
        "name": "Untitled",
        "namespaceId": "57622108-1337-4edd-833a-2557835bcfe0",
      },
      "code": "Block",
      "display": "Untitled",
      "errors": Array [],
      "hide": true,
      "renderText": [Function],
      "type": "any",
      "value": "#57622108-1337-4edd-833a-2557835bcfe0",
    },
    Object {
      "attrs": undefined,
      "code": "Dot",
      "display": ".",
      "errors": Array [
        Object {
          "message": "Missing expression",
          "type": "syntax",
        },
        Object {
          "message": "Parse error: \\"\\"",
          "type": "parse",
        },
      ],
      "hide": false,
      "renderText": undefined,
      "type": "any",
      "value": ".",
    },
  ],
  "firstCompletion": Object {
    "codeFragments": Array [
      Object {
        "attrs": Object {
          "id": "481b6dd1-e668-4477-9e47-cfe5cb1239d0",
          "kind": "Variable",
          "name": "varvarabcvar",
          "namespaceId": "57622108-1337-4edd-833a-2557835bcfe0",
        },
        "code": "Variable",
        "display": "varvarabcvar",
        "errors": Array [],
        "hide": false,
        "renderText": [Function],
        "type": "number",
        "value": "varvarabcvar",
      },
    ],
    "kind": "variable",
    "name": "varvarabcvar",
    "namespace": "Untitled",
    "positionChange": 50,
    "preview": undefined,
    "renderDescription": [Function],
    "replacements": Array [
      "#57622108-1337-4edd-833a-2557835bcfe0.",
      "#57622108-1337-4edd-833a-2557835bcfe0",
      "varvarabcvar",
      "varvarabcvar",
    ],
    "value": "#57622108-1337-4edd-833a-2557835bcfe0.varvarabcvar",
    "weight": 1,
  },
}
`;

exports[`Complete [dot equal different namespaceId] = 1 + varvarabcvar. 1`] = `
Object {
  "codeFragments": Array [
    Object {
      "attrs": undefined,
      "code": "Equal",
      "display": "=",
      "errors": Array [],
      "hide": false,
      "renderText": undefined,
      "type": "any",
      "value": "=",
    },
    Object {
      "attrs": undefined,
      "code": "Space",
      "display": " ",
      "errors": Array [],
      "hide": false,
      "renderText": undefined,
      "type": "any",
      "value": " ",
    },
    Object {
      "attrs": undefined,
      "code": "NumberLiteral",
      "display": "1",
      "errors": Array [],
      "hide": false,
      "renderText": undefined,
      "type": "number",
      "value": "1",
    },
    Object {
      "attrs": undefined,
      "code": "Space",
      "display": " ",
      "errors": Array [],
      "hide": false,
      "renderText": undefined,
      "type": "any",
      "value": " ",
    },
    Object {
      "attrs": undefined,
      "code": "Plus",
      "display": "+",
      "errors": Array [],
      "hide": false,
      "renderText": undefined,
      "type": "number",
      "value": "+",
    },
    Object {
      "attrs": undefined,
      "code": "Space",
      "display": " ",
      "errors": Array [],
      "hide": false,
      "renderText": undefined,
      "type": "any",
      "value": " ",
    },
    Object {
      "attrs": undefined,
      "code": "Function",
      "display": "varvarabcvar",
      "errors": Array [
        Object {
          "message": "Unknown function varvarabcvar",
          "type": "syntax",
        },
        Object {
          "message": "TODO mismatch token FunctionCall",
          "type": "parse",
        },
        Object {
          "message": "Parse error: \\"\\"",
          "type": "parse",
        },
      ],
      "hide": false,
      "renderText": undefined,
      "type": "any",
      "value": "varvarabcvar",
    },
    Object {
      "attrs": undefined,
      "code": "Dot",
      "display": ".",
      "errors": Array [
        Object {
          "message": "Missing expression",
          "type": "syntax",
        },
      ],
      "hide": false,
      "renderText": undefined,
      "type": "any",
      "value": ".",
    },
  ],
  "firstCompletion": Object {
    "codeFragments": Array [
      Object {
        "attrs": undefined,
        "code": "Function",
        "display": "LEN()",
        "errors": Array [],
        "hide": false,
        "renderText": undefined,
        "type": "any",
        "value": "LEN()",
      },
    ],
    "kind": "function",
    "name": "LEN",
    "namespace": "core",
    "positionChange": 4,
    "preview": undefined,
    "renderDescription": [Function],
    "replacements": Array [
      "LEN",
    ],
    "value": "LEN()",
    "weight": 0,
  },
}
`;

exports[`Complete [dot equal same namespaceId] = 1 + varvarabcvar. 1`] = `
Object {
  "codeFragments": Array [
    Object {
      "attrs": undefined,
      "code": "Equal",
      "display": "=",
      "errors": Array [],
      "hide": false,
      "renderText": undefined,
      "type": "any",
      "value": "=",
    },
    Object {
      "attrs": undefined,
      "code": "Space",
      "display": " ",
      "errors": Array [],
      "hide": false,
      "renderText": undefined,
      "type": "any",
      "value": " ",
    },
    Object {
      "attrs": undefined,
      "code": "NumberLiteral",
      "display": "1",
      "errors": Array [],
      "hide": false,
      "renderText": undefined,
      "type": "number",
      "value": "1",
    },
    Object {
      "attrs": undefined,
      "code": "Space",
      "display": " ",
      "errors": Array [],
      "hide": false,
      "renderText": undefined,
      "type": "any",
      "value": " ",
    },
    Object {
      "attrs": undefined,
      "code": "Plus",
      "display": "+",
      "errors": Array [],
      "hide": false,
      "renderText": undefined,
      "type": "number",
      "value": "+",
    },
    Object {
      "attrs": undefined,
      "code": "Space",
      "display": " ",
      "errors": Array [],
      "hide": false,
      "renderText": undefined,
      "type": "any",
      "value": " ",
    },
    Object {
      "attrs": undefined,
      "code": "FunctionName",
      "display": "varvarabcvar",
      "errors": Array [],
      "hide": false,
      "renderText": [Function],
      "type": "string",
      "value": "varvarabcvar",
    },
    Object {
      "attrs": undefined,
      "code": "Dot",
      "display": ".",
      "errors": Array [
        Object {
          "message": "Missing expression",
          "type": "syntax",
        },
        Object {
          "message": "Parse error: \\"\\"",
          "type": "parse",
        },
      ],
      "hide": false,
      "renderText": undefined,
      "type": "any",
      "value": ".",
    },
  ],
  "firstCompletion": Object {
    "codeFragments": Array [
      Object {
        "attrs": Object {
          "id": "481b6dd1-e668-4477-9e47-cfe5cb1239d0",
          "kind": "Variable",
          "name": "varvarabcvar",
          "namespaceId": "57622108-1337-4edd-833a-2557835bcfe0",
        },
        "code": "Variable",
        "display": "varvarabcvar",
        "errors": Array [],
        "hide": false,
        "renderText": [Function],
        "type": "number",
        "value": "varvarabcvar",
      },
    ],
    "kind": "variable",
    "name": "varvarabcvar",
    "namespace": "Untitled",
    "positionChange": 50,
    "preview": undefined,
    "renderDescription": [Function],
    "replacements": Array [
      "#57622108-1337-4edd-833a-2557835bcfe0.",
      "#57622108-1337-4edd-833a-2557835bcfe0",
      "varvarabcvar",
      "varvarabcvar",
    ],
    "value": "#57622108-1337-4edd-833a-2557835bcfe0.varvarabcvar",
    "weight": 1,
  },
}
`;

exports[`Complete [var equal different namespaceId with namespaceId] =Untitled.varvarabcvar 1`] = `
Object {
  "codeFragments": Array [
    Object {
      "attrs": undefined,
      "code": "Equal",
      "display": "=",
      "errors": Array [],
      "hide": false,
      "renderText": undefined,
      "type": "any",
      "value": "=",
    },
    Object {
      "attrs": Object {
        "id": "57622108-1337-4edd-833a-2557835bcfe0",
        "kind": "Block",
        "name": "Untitled",
        "namespaceId": "57622108-1337-4edd-833a-2557835bcfe0",
      },
      "code": "Block",
      "display": "Untitled",
      "errors": Array [],
      "hide": false,
      "renderText": [Function],
      "type": "any",
      "value": "#57622108-1337-4edd-833a-2557835bcfe0",
    },
    Object {
      "attrs": undefined,
      "code": "Dot",
      "display": ".",
      "errors": Array [],
      "hide": false,
      "renderText": undefined,
      "type": "any",
      "value": ".",
    },
    Object {
      "attrs": undefined,
      "code": "FunctionName",
      "display": "varvarabcvar",
      "errors": Array [],
      "hide": false,
      "renderText": [Function],
      "type": "string",
      "value": "varvarabcvar",
    },
  ],
  "firstCompletion": Object {
    "codeFragments": Array [
      Object {
        "attrs": undefined,
        "code": "Function",
        "display": "LEN()",
        "errors": Array [],
        "hide": false,
        "renderText": undefined,
        "type": "any",
        "value": "LEN()",
      },
    ],
    "kind": "function",
    "name": "LEN",
    "namespace": "core",
    "positionChange": 4,
    "preview": undefined,
    "renderDescription": [Function],
    "replacements": Array [
      "LEN",
    ],
    "value": "LEN()",
    "weight": 0,
  },
}
`;

exports[`Complete [var equal different namespaceId] =varvarabcvar 1`] = `
Object {
  "codeFragments": Array [
    Object {
      "attrs": undefined,
      "code": "Equal",
      "display": "=",
      "errors": Array [],
      "hide": false,
      "renderText": undefined,
      "type": "any",
      "value": "=",
    },
    Object {
      "attrs": undefined,
      "code": "Function",
      "display": "varvarabcvar",
      "errors": Array [
        Object {
          "message": "Unknown function varvarabcvar",
          "type": "syntax",
        },
        Object {
          "message": "TODO mismatch token FunctionCall",
          "type": "parse",
        },
      ],
      "hide": false,
      "renderText": undefined,
      "type": "any",
      "value": "varvarabcvar",
    },
  ],
  "firstCompletion": Object {
    "codeFragments": Array [
      Object {
        "attrs": undefined,
        "code": "Function",
        "display": "LEN()",
        "errors": Array [],
        "hide": false,
        "renderText": undefined,
        "type": "any",
        "value": "LEN()",
      },
    ],
    "kind": "function",
    "name": "LEN",
    "namespace": "core",
    "positionChange": 4,
    "preview": undefined,
    "renderDescription": [Function],
    "replacements": Array [
      "LEN",
    ],
    "value": "LEN()",
    "weight": 0,
  },
}
`;

exports[`Complete [var equal same namespaceId] =varvarabcvar 1`] = `
Object {
  "codeFragments": Array [
    Object {
      "attrs": undefined,
      "code": "Equal",
      "display": "=",
      "errors": Array [],
      "hide": false,
      "renderText": undefined,
      "type": "any",
      "value": "=",
    },
    Object {
      "attrs": undefined,
      "code": "FunctionName",
      "display": "varvarabcvar",
      "errors": Array [],
      "hide": false,
      "renderText": [Function],
      "type": "string",
      "value": "varvarabcvar",
    },
  ],
  "firstCompletion": Object {
    "codeFragments": Array [
      Object {
        "attrs": Object {
          "id": "481b6dd1-e668-4477-9e47-cfe5cb1239d0",
          "kind": "Variable",
          "name": "varvarabcvar",
          "namespaceId": "57622108-1337-4edd-833a-2557835bcfe0",
        },
        "code": "Variable",
        "display": "varvarabcvar",
        "errors": Array [],
        "hide": false,
        "renderText": [Function],
        "type": "number",
        "value": "varvarabcvar",
      },
    ],
    "kind": "variable",
    "name": "varvarabcvar",
    "namespace": "Untitled",
    "positionChange": 50,
    "preview": undefined,
    "renderDescription": [Function],
    "replacements": Array [
      "#57622108-1337-4edd-833a-2557835bcfe0.",
      "#57622108-1337-4edd-833a-2557835bcfe0",
      "varvarabcvar",
      "varvarabcvar",
    ],
    "value": "#57622108-1337-4edd-833a-2557835bcfe0.varvarabcvar",
    "weight": 1,
  },
}
`;

exports[`Complete [var include different namespaceId] =1+arvar 1`] = `
Object {
  "codeFragments": Array [
    Object {
      "attrs": undefined,
      "code": "Equal",
      "display": "=",
      "errors": Array [],
      "hide": false,
      "renderText": undefined,
      "type": "any",
      "value": "=",
    },
    Object {
      "attrs": undefined,
      "code": "NumberLiteral",
      "display": "1",
      "errors": Array [],
      "hide": false,
      "renderText": undefined,
      "type": "number",
      "value": "1",
    },
    Object {
      "attrs": undefined,
      "code": "Plus",
      "display": "+",
      "errors": Array [],
      "hide": false,
      "renderText": undefined,
      "type": "number",
      "value": "+",
    },
    Object {
      "attrs": undefined,
      "code": "Function",
      "display": "arvar",
      "errors": Array [
        Object {
          "message": "Unknown function arvar",
          "type": "syntax",
        },
        Object {
          "message": "TODO mismatch token FunctionCall",
          "type": "parse",
        },
      ],
      "hide": false,
      "renderText": undefined,
      "type": "any",
      "value": "arvar",
    },
  ],
  "firstCompletion": Object {
    "codeFragments": Array [
      Object {
        "attrs": undefined,
        "code": "Function",
        "display": "LEN()",
        "errors": Array [],
        "hide": false,
        "renderText": undefined,
        "type": "any",
        "value": "LEN()",
      },
    ],
    "kind": "function",
    "name": "LEN",
    "namespace": "core",
    "positionChange": 4,
    "preview": undefined,
    "renderDescription": [Function],
    "replacements": Array [
      "LEN",
    ],
    "value": "LEN()",
    "weight": 0,
  },
}
`;

exports[`Complete [var include same namespaceId] =1+arvar 1`] = `
Object {
  "codeFragments": Array [
    Object {
      "attrs": undefined,
      "code": "Equal",
      "display": "=",
      "errors": Array [],
      "hide": false,
      "renderText": undefined,
      "type": "any",
      "value": "=",
    },
    Object {
      "attrs": undefined,
      "code": "NumberLiteral",
      "display": "1",
      "errors": Array [],
      "hide": false,
      "renderText": undefined,
      "type": "number",
      "value": "1",
    },
    Object {
      "attrs": undefined,
      "code": "Plus",
      "display": "+",
      "errors": Array [],
      "hide": false,
      "renderText": undefined,
      "type": "number",
      "value": "+",
    },
    Object {
      "attrs": undefined,
      "code": "Function",
      "display": "arvar",
      "errors": Array [
        Object {
          "message": "Unknown function arvar",
          "type": "syntax",
        },
        Object {
          "message": "TODO mismatch token FunctionCall",
          "type": "parse",
        },
      ],
      "hide": false,
      "renderText": undefined,
      "type": "any",
      "value": "arvar",
    },
  ],
  "firstCompletion": Object {
    "codeFragments": Array [
      Object {
        "attrs": Object {
          "id": "481b6dd1-e668-4477-9e47-cfe5cb1239d0",
          "kind": "Variable",
          "name": "varvarabcvar",
          "namespaceId": "57622108-1337-4edd-833a-2557835bcfe0",
        },
        "code": "Variable",
        "display": "varvarabcvar",
        "errors": Array [],
        "hide": false,
        "renderText": [Function],
        "type": "number",
        "value": "varvarabcvar",
      },
    ],
    "kind": "variable",
    "name": "varvarabcvar",
    "namespace": "Untitled",
    "positionChange": 50,
    "preview": undefined,
    "renderDescription": [Function],
    "replacements": Array [
      "#57622108-1337-4edd-833a-2557835bcfe0.",
      "#57622108-1337-4edd-833a-2557835bcfe0",
      "varvarabcvar",
      "varvarabcvar",
    ],
    "value": "#57622108-1337-4edd-833a-2557835bcfe0.varvarabcvar",
    "weight": 1,
  },
}
`;

exports[`Complete [var startWith same namespace] = 1 + var 1`] = `
Object {
  "codeFragments": Array [
    Object {
      "attrs": undefined,
      "code": "Equal",
      "display": "=",
      "errors": Array [],
      "hide": false,
      "renderText": undefined,
      "type": "any",
      "value": "=",
    },
    Object {
      "attrs": undefined,
      "code": "Space",
      "display": " ",
      "errors": Array [],
      "hide": false,
      "renderText": undefined,
      "type": "any",
      "value": " ",
    },
    Object {
      "attrs": undefined,
      "code": "NumberLiteral",
      "display": "1",
      "errors": Array [],
      "hide": false,
      "renderText": undefined,
      "type": "number",
      "value": "1",
    },
    Object {
      "attrs": undefined,
      "code": "Space",
      "display": " ",
      "errors": Array [],
      "hide": false,
      "renderText": undefined,
      "type": "any",
      "value": " ",
    },
    Object {
      "attrs": undefined,
      "code": "Plus",
      "display": "+",
      "errors": Array [],
      "hide": false,
      "renderText": undefined,
      "type": "number",
      "value": "+",
    },
    Object {
      "attrs": undefined,
      "code": "Space",
      "display": " ",
      "errors": Array [],
      "hide": false,
      "renderText": undefined,
      "type": "any",
      "value": " ",
    },
    Object {
      "attrs": undefined,
      "code": "Function",
      "display": "var",
      "errors": Array [
        Object {
          "message": "Unknown function var",
          "type": "syntax",
        },
        Object {
          "message": "TODO mismatch token FunctionCall",
          "type": "parse",
        },
      ],
      "hide": false,
      "renderText": undefined,
      "type": "any",
      "value": "var",
    },
  ],
  "firstCompletion": Object {
    "codeFragments": Array [
      Object {
        "attrs": Object {
          "id": "481b6dd1-e668-4477-9e47-cfe5cb1239d0",
          "kind": "Variable",
          "name": "varvarabcvar",
          "namespaceId": "57622108-1337-4edd-833a-2557835bcfe0",
        },
        "code": "Variable",
        "display": "varvarabcvar",
        "errors": Array [],
        "hide": false,
        "renderText": [Function],
        "type": "number",
        "value": "varvarabcvar",
      },
    ],
    "kind": "variable",
    "name": "varvarabcvar",
    "namespace": "Untitled",
    "positionChange": 50,
    "preview": undefined,
    "renderDescription": [Function],
    "replacements": Array [
      "#57622108-1337-4edd-833a-2557835bcfe0.",
      "#57622108-1337-4edd-833a-2557835bcfe0",
      "varvarabcvar",
      "varvarabcvar",
    ],
    "value": "#57622108-1337-4edd-833a-2557835bcfe0.varvarabcvar",
    "weight": 1,
  },
}
`;
